# pam_sasl

./: AUTHORS  ChangeLog  Make.xml.rules  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
src/: pam_sasl.8  pam_sasl.8.xml  pam_sasl.c
src/.deps/: pam_sasl.Plo
